--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -64,7 +64,7 @@ Ihre Referenzwerte wurden auf die gleiche Weise durch die Untersuchung der ideal
 \end{table}
 
 Für die Bestimmung der Dichte der amorphen Struktur wurde das Bulkmaterial über den Schmelzpunkt von \SI{2317}{\kelvin} auf \SI{2555}{\kelvin} erhitzt, bei dieser Temperatur relaxiert und langsam auf Raumtemperatur abgekühlt.
-Aufgrund der strukturellen Vielfalt bei amorphen Aluminiumoxiden liegt der Referenzbereich der Dichte von gasphasen-abgeschiedenen \ce{Al2O3}-Schichten zwischen \SI{3.2}{\gpcc} und \SI{3.9}{\gpcc}\cite{wang_dependence_1997}.
+Aufgrund der strukturellen Vielfalt bei amorphen Aluminiumoxiden liegt der Referenzbereich der Dichte von abgeschiedenen \ce{Al2O3}-Schichten zwischen \SI{3.2}{\gpcc} und \SI{3.9}{\gpcc}\cite{wang_dependence_1997}.
 
 Die Verteilung der Koordinationszahlen amorpher Schichten wurde in dieser Arbeit nicht näher untersucht, da einerseits nur Vergleiche mit anderen MD-Rechnungen zur Verfügung stehen\cite{gutierrez_molecular_2002}, andererseits ein weiteres eigenes Werkzeug hätte geschrieben und getestet werden müssen.
 Die Integration eines solchen Werkzeuges zur Bestimmung der Verteilung der Koordinationen in Parsivald könnte allerdings helfen, die Struktur der Schicht während der laufenden Simulation zu untersuchen.
@@ -81,7 +81,7 @@ Damit ist die \pot{liu}-Parametrisierung erfolgreich bei der Darstellung von Kri
 
 \subsubsection{Simulationen der Stabilität von Precursormolekülen}
 
-Die Stabilität für Trimethylaluminium (TMA) wurde nach dessen manueller Präparation für die drei Parametersätze \pot{Al\_Al0\_AlN}, \pot{liu\_ettringite} (kurz \pot{liu}) und \pot{narayanan} untersucht (Abbildung~\ref{fig:tmastability}).
+Die Stabilität für Trimethylaluminium (TMA) wurde nach dessen manueller Präparation für die drei Parametersätze \pot{Al\_Al0\_AlN}, \pot{liu} und \pot{narayanan} untersucht (Abbildung~\ref{fig:tmastability}).
 Die Strukturdaten von TMA\cite{haynes_crc_2011} sind in Anhang~\ref{appendix_constants} zusammen gefasst.
 
 \begin{figure}[bt]
@@ -143,7 +143,7 @@ Anhand des \pot{Al\_Al0\_AlN}-Parametersatzes wurden auch Simulationen der Reakt
 Diese zeigten keinen Erfolg, da die \ce{Al-C}-Bindungen in der \pot{Al\_Al0\_AlN}-Parametrisierung entweder zu stark sind oder in zu großem Maß von den Methylgruppen abgeschirmt werden.
 
 TMA lässt sich also mit dem \pot{liu}-Parametersatz und der \pot{narayanan}-Parametrisierung nicht simulieren.
-Der \pot{Al\_Al0\_AlN}-Parametersatz kann hingegen weder das Bulkmaterial noch die spontane Reaktionen zwischen beiden Precursorgasen beschreiben.
+Der \pot{Al\_Al0\_AlN}-Parametersatz kann hingegen weder das Bulkmaterial noch die spontane Reaktion zwischen beiden Precursorgasen beschreiben.
 Somit ist keine der untersuchten Parametrisierungen zu einer vollständigen Beschreibung der TMA-Wasser-ALD in der Lage.
 
 \subsubsection{Simulation der Hydroxylierung einer \texorpdfstring{$\alpha$-\ce{Al2O3}}{alpha-Al2O3}-Oberfläche}
