--- a/appendix_gold.tex
+++ b/appendix_gold.tex
@@ -1,4 +1,5 @@
 \chapter{Ergänzungen zur Simulation von Gold-PVD}
+\label{appendix_gold}
 
 Im Folgenden sollen ergänzend die in Abschnitt~\ref{goldpvd} vorgestellten Simulationen auf nanostrukturierten Substraten dargestellt werden.
 Die beiden Substrate wurden mit \SI{1}{\nano\meter} breiten Lamellen sowie \SI{1x1}{\nano\meter} breiten Säulen, die in beiden Fällen eine Höhe von \SI{1}{\nano\meter} haben, präpariert (Abbildung~\ref{fig:goldnanostructures}), um die Stabilität von Parsivald bei der Relaxierung solcher Substrate zu prüfen.
