--- a/depositions.tex
+++ b/depositions.tex
@@ -2,12 +2,12 @@
 \label{depositions}
 
 Gasphasenabscheidungen sind Herstellungsverfahren, bei denen durch physikalische oder chemische Prozesse aus einer Gasphase eine dünne Schicht auf einer Oberfläche aufgewachsen wird.
-Bei den hier untersuchten Arten von Gasphasenabscheidungen handelt es sich um \textbf{Physikalische Gasphasenabscheidung}\cite{mattox_handbook_2010} (PVD, Physical Vapor Deposition), \textbf{Chemische Gasphasenabscheidung}\cite{pierson_handbook_1999} (CVD, Chemical Vapor Deposition) und \textbf{Atomlagenabscheidung} (ALD, Atomic Layer Deposition, eine Sonderform der CVD)\cite{suntola_method_1977}, die im folgenden vorgestellt werden.
+Bei den hier untersuchten Arten von Gasphasenabscheidungen handelt es sich um \textbf{Physikalische Gasphasenabscheidung}\cite{mattox_handbook_2010} (PVD, Physical Vapor Deposition), \textbf{Chemische Gasphasenabscheidung}\cite{pierson_handbook_1999} (CVD, Chemical Vapor Deposition) und \textbf{Atomlagenabscheidung} (ALD, Atomic Layer Deposition, eine Sonderform der CVD)\cite{suntola_method_1977}, die im Folgenden vorgestellt werden.
 
-Allen Verfahren ist gemein, dass einzelne Atome oder Moleküle aus der Gasphase auf der Oberfläche auftreffen, dort physikalisch oder chemisch adsorbieren und so mit vorhersehbarer Rate eine dünne Schicht eines gewünschten Materiales bilden.
+Diesen Verfahren ist gemein, dass einzelne Atome oder Moleküle aus der Gasphase auf der Oberfläche auftreffen, dort physikalisch oder chemisch adsorbieren und so mit vorhersehbarer Rate eine dünne Schicht eines gewünschten Materiales bilden.
 Die Abscheidungsmethoden ermöglichen dabei über ihre Adsorptionsbedingungen und die Wahl der Prozessgase die Bildung unterschiedlicher Materialien mit verschiedener Kontrolle der Qualität und Dicke der abgeschiedenen Schicht.
-Tabellen~\ref{tab:deposition-comparison} und~\ref{tab:deposition-materials} sollen einen kurzen Überblick über die vorgestellten Abscheidungsmethoden und ihre möglichen Materialien verschaffen.
-Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, über die Abbildung~\ref{fig:reactors} einen kurzen Überblick geben soll.
+Tabellen~\ref{tab:deposition-comparison} und~\ref{tab:deposition-materials} geben einen kurzen Überblick über die vorgestellten Abscheidungsmethoden und ihre möglichen Materialien.
+Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, die in Abbildung~\ref{fig:reactors} schematisch dargestellt sind.
 
 \begin{table}[hb]
   \oddrowcolors
@@ -119,7 +119,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
 \subsection{Physikalische Gasphasenabscheidung}
 
 Physikalische Gasphasenabscheidungen (PVD, Physical Vapor Deposition) sind eine grundlegende Art von Abscheidungsprozessen, bei denen einzelne Atome nichtreaktiv auf einer Oberfläche adsorbieren.
-Zu ihnen zählt neben der thermischen oder elektrischen Evaporation auch Sputtering, bei dem aus einem Block des gewünschten Materiales (Target) per Elektronen- oder Ionenstrahl kontinuierlich Atome herausgeschlagen werden, die sich dann auf dem Substrat absetzen und dort zu einer dünnen Schicht verbinden\cite{mattox_handbook_2010,helmersson_ionized_2006}.
+Zu ihnen zählt neben der thermischen oder elektrischen Evaporation auch das Sputtern, bei dem aus einem Block des gewünschten Materiales (Target) per Elektronen- oder Ionenstrahl kontinuierlich Atome herausgeschlagen werden, die sich dann auf dem Substrat absetzen und dort zu einer dünnen Schicht verbinden\cite{mattox_handbook_2010,helmersson_ionized_2006}.
 Anhand der Energien der herausschlagenden Partikel, dem Teilchenstrom und der Substrattemperatur lässt sich dabei die Wachstumsrate und Qualität des abgeschiedenen Dünnfilmes beeinflussen.
 Durch die geradlinige Ausbreitung der aus dem Target evaporierten oder geschlagenen Partikel lassen sich zwar dünne, konforme Schichten auf glatten Substraten erzeugen\cite{svorcik_annealing_2011}, doch wird dadurch eine ebenmäßige Beschichtung komplizierter Geometrien verhindert.
 Die Abscheidung gemischter Systeme wie Legierungen und mehrlagigen Schichten wird bei der PVD durch Nutzung mehrerer Targets ermöglicht\cite{cammarata_nanoindentation_1990}.
@@ -136,7 +136,7 @@ Zudem sollten die gasförmigen Nebenprodukte inert sein, um nicht mit der Oberfl
 Auch eine physikalische Adsorption der Nebenprodukte auf der Oberfläche kann den Dünnfilm verunreinigen.
 Dabei sind stets die Prozesstemperaturen, -drücke, Reaktionsbarrieren und die Stabilität aller involvierten Moleküle zu beachten.
 Die Schichtdicke lässt sich bei der CVD auf mehrere Nanometer genau kontrollieren, was hinsichtlich einer gegenüber der ALD vergleichsweise hohen Wachstumsrate (\SI{>1}{\micro\meter\per\hour} im Kontrast zu \SI{0.1}{\nano\meter} pro Zyklus je \SIrange{1}{10}{\second}\cite{pierson_handbook_1999,puurunen_surface_2005}) für viele Anwendungen ausreichend ist.
-PVD ermöglicht zwar vergleichbare Wachstumsraten, bildet aber aufgrund senkrechten Auftreffwinkel der Atome keine konformen Schichten auf strukturierten Oberflächen.
+PVD ermöglicht zwar vergleichbare Wachstumsraten, bildet aber aufgrund senkrechter Auftreffwinkel der Atome keine konformen Schichten auf strukturierten Oberflächen.
 
 \subsection{Atomlagenabscheidung}
 
@@ -151,19 +151,8 @@ PVD ermöglicht zwar vergleichbare Wachstumsraten, bildet aber aufgrund senkrech
   \label{fig:ald-schema}
 \end{figure}
 
-\begin{figure}[b]
-  \centering
-  \includegraphics[width=0.5\textwidth]{sterichindrance_noalpha}
-  \caption[Sterische Hinderung auf einem Gitter]{
-    Sterische Hinderung auf einem Gitter:
-    Adsorbierte Liganden schirmen benachbarte Gitterpunkte von weiteren Precursormolekülen ab.
-  }
-  \label{fig:sterichindrance}
-\end{figure}
-
 Als Variation einer Chemischen Gasphasenabscheidung entstanden Atomlagenabscheidungen (ALD, Atomic Layer Deposition) mit dem Ziel, konforme dünne Schichten kontrolliert in einzelnen Atomlagen mit Sub-Nanometer-Genauigkeit der Schichtdicke aufwachsen zu lassen\cite{suntola_method_1977,puurunen_surface_2005,elliott_atomic-scale_2012}.
-.
-Dazu werden zwei Precursorgase wechselweise in separaten Schritten (Halbzyklen) in den Reaktor geleitet, wo sie wie bei CVD-Prozessen mit der Oberfläche reagieren und so langsam eine Schicht bilden (Abbildung~\ref{fig:ald-schema}).
+Dazu werden zwei Precursorgase wechselweise in separaten Schritten (Halbzyklen) in den Reaktor geleitet, in denen sie wie bei CVD-Prozessen mit der Oberfläche reagieren und so langsam eine Schicht bilden (Abbildung~\ref{fig:ald-schema}).
 Zwischen den Precursorschritten entfernen Spülschritte mit inertem Gas verbleibende Precursormoleküle und Nebenprodukte aus dem Reaktor und verhindern so gleichzeitige Reaktionen beider Precursorgase.
 So werden einerseits Gasphasenreaktionen vermieden, andererseits limitiert die Sättigung der Oberfläche mit Precursorliganden in jedem Precursorschritt die Zunahme der Dicke pro Zyklus.
 Die Wachstumsrate aus den kontinuierlichen Prozessen wird daher von dem Growth-per-Cycle-Wert (GPC) abgelöst, der angibt, wie viel eine Schicht im Schnitt pro Zyklus wächst.
@@ -174,11 +163,21 @@ Anders als der Name des Prozesses vermuten lässt, werden aufgrund sterischer Hi
 Die Suche nach möglichen Precursorpaaren und Prozessparametern unterliegt ansonsten gleichen Anforderungen wie bei CVD.
 Eine ausführlichere Übersicht zu Atomlagenabscheidungen und zu möglichen Precursorpaaren für verschiedene Materialien findet sich in Referenz~\cite{puurunen_surface_2005}.
 
+\begin{figure}[t]
+  \centering
+  \includegraphics[width=0.5\textwidth]{sterichindrance_noalpha}
+  \caption[Sterische Hinderung auf einem Gitter]{
+    Sterische Hinderung auf einem Gitter:
+    Adsorbierte Liganden schirmen benachbarte Gitterpunkte von weiteren Precursormolekülen ab.
+  }
+  \label{fig:sterichindrance}
+\end{figure}
+
 \subsection{Methoden zur Simulation von Gasphasenabscheidungen}
 
 Für die Simulation von Gasphasenabscheidungen stehen verschiedene numerische Methoden zur Verfügung, welche die Darstellung auf unterschiedlichen Zeit- und Größenordnungen ermöglichen (Tabelle~\ref{tab:deposition-simulations}).
 Jede dieser Methoden basiert auf anderen Annahmen und Formulierungen, sodass sich ihre Anwendungsgebiete zwar nur marginal überschneiden, aber der Transfer von Ergebnissen zwischen den Methoden zu präziseren Vorhersagen führen kann.
-So können CFD-Reaktorsimulationen (Computational Fluid Dynamics) den Gasverbrauch an charakteristischen Punkten der Oberfläche durch KMC-Simulationen ermitteln, welche wiederum auf DFT-Daten (Dichtefunktionaltheorie) für Reaktionsraten und -energien zurück greift.
+So können CFD-Reaktorsimulationen (Computational Fluid Dynamics) den Gasverbrauch an charakteristischen Punkten der Oberfläche durch KMC-Simulationen ermitteln, welche wiederum auf DFT-Daten (Dichtefunktionaltheorie) für Reaktionsraten und -energien zurück greifen.
 Bisherige Simulationen verzichten aus Gründen der notwendigen Laufzeit meist auf eine strukturelle Betrachtungen der abgeschiedenen Schicht, wie sie etwa mit molekulardynamischen Rechnungen möglich werden.
 Gerade für Anwendungen in der Mikro- und Nanoelektronik sind die strukturellen Eigenschaften der Schichten eng mit ihrer Funktion (mechanische\cite{chasiotis_mechanical_2003,cammarata_nanoindentation_1990} und elektronische Eigenschaften\cite{aspnes_optical_1982,steudel_influence_2004}) verknüpft, sodass eine strukturelle Beschreibung für eine umfassende Betrachtung des Prozesses unerlässlich ist.
 
