--- a/kmc.tex
+++ b/kmc.tex
@@ -56,7 +56,7 @@ Zwar lassen sich unbekannte Raten auch während der Simulation durch exaktere Me
 Deshalb wird oft auf ein Simulationsgitter zurück gegriffen, um die Zahl der verschiedenartigen Ereignisse gering zu halten.
 
 Vor allem bei kristallinen Strukturen lassen sich viele Ereignisse durch das Verschieben, Entfernen oder Hinzufügen von einzelnen Atomen auf den Gitterplätzen beschreiben, wobei die Ereignisraten jeweils von den benachbarten Gitterplätzen abhängig sind.
-Dadurch lässt sich durch eine Suche über alle betroffenen Gitterplätze effizient eine Ereignisliste aufbauen, die anschließend zur Auswahl eines Ereignisses genutzt werden kann.
+Dadurch lässt sich eine Liste von potentiellen Ereignissen, die anschließend zur Auswahl eines Ereignisses genutzt werden kann, effizient durch eine Suche über alle betroffenen Gitterplätze aufbauen.
 Atompositionen in amorphen Strukturen sind hingegen kontinuierlich im Raum verteilt und lassen sich keinen Gitterplätzen zuordnen (Off-Lattice), wodurch der Zustandsraum durch kontinuierliche Freiheitsgrade überabzählbar unendlich viele Zustände enthält und nicht mehr vollständig betrachtet werden kann.
 
 Um diese Beschränkungen zu umgehen, werden in Parsivald (Abschnitt~\ref{parsivald}) alle gleichartigen Ereignisse, die sich in unmittelbarer Nachbarschaft eines bestimmten Oberflächenatomes befinden, zu einem einzigen Ereignis mit fester Rate zusammen gefasst.
