--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -2,16 +2,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% document-wide settings %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\draftmodetrue
 %% \testonlytrue
 %% \colortblfixfalse
 %% \paperonlytrue
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \documentclass[
-\ifdraftmode
-draft,
-\fi
+%% draft,
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 fontsize=11pt,
 a4paper,
 twoside,
