--- a/models.tex
+++ b/models.tex
@@ -3,7 +3,7 @@
 
 In diesem Kapitel wird zuerst auf den aktuellen Stand der Forschung eingegangen, bevor das Parsivald-Modell in Abschnitt~\ref{parsivald} vorgestellt wird.
 Im Anschluss wird in Abschnitt~\ref{runtime} eine Laufzeitanalyse von Parsivald durchgeführt und die Einschränkungen im Parallelisierungsverhalten betrachtet.
-Zuletzt gibt Abschnitt~\ref{mdmethods} einen Überblick über die verwendeten Methoden und Vorgehensweisen bei den in Kapitel~\ref{results} verwendeten molekulardynamischen Simulationen.
+Zuletzt gibt Abschnitt~\ref{mdmethods} einen Überblick über die MD-Methoden und Vorgehensweisen bei den in Kapitel~\ref{results} durchgeführten molekulardynamischen Simulationen.
 
 \input{present}
 \clearpage
