--- a/multilayer.tex
+++ b/multilayer.tex
@@ -30,9 +30,9 @@ Diese Beobachtungen decken sich mit den Ergebnissen anderer Simulationen\cite{zh
 Bei Untersuchungen der Alpha-Form konnten weder Poren noch Hohlräume gefunden werden.
 Die Lagen zeigen jedoch bei geringeren Relaxationszeiten eine stärkere Durchmischung, wie in Abbildung~\ref{fig:multilayerplots-b} anhand der nach Schichthöhe aufgelösten Atomkonzentration ersichtlich ist.
 In der Simulation wird die Durchmischung durch eine Unterrelaxation verursacht, bei der sich das auftreffende Atom nicht weit genug auf der Oberfläche bewegen kann, um einen günstigen Ablagerungsort zu erreichen.
-Stattdessen verbleibt es in direkter Nähe zum möglicherweise ungünstigen Auftreffort, wodurch sich Unebenheiten verstärken können und somit die Durchmischung erhöht.
+Stattdessen verbleibt es in direkter Nähe zum möglicherweise ungünstigen Adsorptionsort, wodurch sich Unebenheiten verstärken können und somit die Durchmischung erhöht wird.
 Ähnliche Effekte wurden von \textsc{Zhou et al.}\cite{zhou_atomistic_1998} bereits für niedrige Auftreffenergien beobachtet.
-Für Systeme, die zu einer stärkeren Durchmischung neigen, sollten längere Relaxationszeiten diese zusätzlich befördern.
+Für Systeme, die zu einer stärkeren Durchmischung neigen, sollten längere Relaxationszeiten diese hingegen zusätzlich befördern.
 
 \begin{figure}[bp]
   \captionsetup[subfigure]{singlelinecheck=false}
