--- a/test.tex
+++ b/test.tex
@@ -1,25 +1,7 @@
-\input{copperpvd}
 
-%% \clearpage
-%% \input{titel}
-%% \pagenumbering{roman}
-%% \clearpage
-%% \input{abstract}
-%% \clearpage
-%% \input{contents}
-
-%% \pagenumbering{arabic}
-
-%% \cleardoublepage
-%% \input{intro}
-%% \cleardoublepage
-%% \input{theory}
-%% \cleardoublepage
-%% \input{models}
-%% \cleardoublepage
-%% \input{results}
-%% \clearpage
-%% \input{siliconpvd}
+\chapter{Test}
+\clearpage
+\section{colortbl + Drucker + Acrobat Reader}
 
 \begin{table}[H]
   %% \oddrowcolors
