--- a/theory.tex
+++ b/theory.tex
@@ -2,7 +2,7 @@
 \label{theory}
 
 Dieses Kapitel soll einen Überblick über die zu simulierenden Prozesse und benutzten Simulationsmethoden geben.
-Dazu stellt Abschnitt~\ref{depositions} das Prinzip von Gasphasenabscheidungen vor, Abschnitte~\ref{md} und~\ref{kmc} behandeln jeweils die Simulationsmethoden der Molekulardynamik und Kinetischen Monte-Carlo-Simulationen.
+Dazu stellt Abschnitt~\ref{depositions} das Prinzip von Gasphasenabscheidungen vor und Abschnitte~\ref{md} und~\ref{kmc} behandeln jeweils die Simulationsmethoden der Molekulardynamik und Kinetischen Monte-Carlo-Simulationen.
 Zuletzt geht Abschnitt~\ref{datastructures} auf die verschiedenen Datenstrukturen ein, die genutzt werden, um effiziente Simulationen großer Simulationsräume zu ermöglichen.
 
 \input{depositions}
