--- a/contents.tex
+++ b/contents.tex
@@ -57,15 +57,19 @@
 \def\arraystretch{1.5}
 \begin{tabular}{lll}
 ALD       & Atomic Layer Deposition             & Atomlagenabscheidung                                       \\
-CFD       & Computational Fluid Dynamics        & Eine Methode zur Gasfluss/Simulation                       \\
+CFD       & Computational Fluid Dynamics        & Numerische Strömungsmechanik                               \\
 CVD       & Chemical Vapor Deposition           & Chemische Gasphasenabscheidung                             \\
 DFT       & Density Functional Theory           & Dichtefunktionaltheorie                                    \\
-EAM       & Embedded Atom Method                & Eingebettete-Atom-Methode                                  \\
+EAM       & Embedded Atom Model                 & Embedded-Atom-Methode                                      \\
 GPC       & Growth per Cycle                    & Schichtwachstum pro ALD-Zyklus                             \\
 KMC       & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methoden                            \\
 MD        & Molecular Dynamics                  & Molekulardynamik                                           \\
-MEAM      & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom-Methode                     \\
+MEAM      & Modified Embedded Atom Model        & Modifizierte Embedded-Atom-Methode                         \\
 MMC       & Metropolis Monte Carlo              & Metropolis Monte Carlo-Methoden                            \\
+NPT       & \multicolumn{2}{l}{Bezeichnung für das Isotherm-Isobare Ensemble}                                \\
+NVE       & \multicolumn{2}{l}{Bezeichnung für das Mikrokanonische Ensemble}                                 \\
+NVT       & \multicolumn{2}{l}{Bezeichnung für das Kanonische Ensemble}                                      \\
+Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions} \\
 PVD       & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung                         \\
 RAM       & Random-Access Memory                & Arbeitsspeicher                                            \\
 RDF       & Radial Distribution Function        & Radiale Verteilungsfunktion                                \\
@@ -73,10 +77,6 @@ ReaxFF    & Reactive Force Fields               & Reaktive Kraftfelder          
 RMS       & Root Mean Square                    & Standardabweichung, z.B. für Rauheiten                     \\
 RSA       & Random Sequential Adsorption        & Zufällige sequenzielle Adsorption                          \\
 TMA       & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})                         \\
-NPT       & \multicolumn{2}{l}{Bezeichnung für das Isotherm-Isobare Ensemble}                                \\
-NVE       & \multicolumn{2}{l}{Bezeichnung für das Mikrokanonische Ensemble}                                 \\
-NVT       & \multicolumn{2}{l}{Bezeichnung für das Kanonische Ensemble}                                      \\
-Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions} \\
 \end{tabular}
 }
 \begin{comment}
@@ -125,23 +125,26 @@ $\Delta t$           & Zeitschrittweite                                         
 $E$                  & Energie                                                             \\
 $E_i$                & Ein KMC-Ereignis                                                    \\
 %% $F_\alpha$        & Einbettungsfunktion des EAM-Potentiales                             \\
+$\vec F_i(X)$        & Kraft auf ein Teilchen $i$                                          \\
 $g_{\alpha\beta}(r)$ & Radiale Verteilungsfunktion der Atomsorten $\alpha$ und $\beta$     \\
 $\kappa$             & Dielektrizitätskonstante eines Materiales                           \\
 $k_B$                & Boltzmann-Konstante                                                 \\
 $m$                  & Masse eines Teilchens                                               \\
 $M$                  & Virtuelle Masse von Thermostaten                                    \\
-$\nabla$             & Nabla-Operator                                                      \\
+$\vec\nabla$         & Nabla-Operator                                                      \\
 %% $n_\text{cyc.}$   & Zahl der simulierten KMC-Zyklen                                     \\
-$p$                  & Anzahl paralleler Prozesse                                          \\
 $p$                  & Druck                                                               \\
+$p$                  & Anzahl paralleler Prozesse                                          \\
 $p_\text{max,1}$     & Obere Schranke für $p$ in kleinen Simulationsräumen                 \\
 $p_\text{max,2}$     & Obere Schranke für $p$ in großen Simulationsräumen                  \\
+$\vec p$             & Impulsvektor                                                        \\
 $r_\text{c}$         & Cutoff-Radius eines MD-Kraftfeldes                                  \\
 $r_d$                & Umkugel-Radius eines Delaunay-Simplexes                             \\
 $\rho_\text{worker}$ & Relative Workerdichte auf der Oberfläche des Simulationsraumes      \\
 $R_i$                & Summe der Ereignisraten von $E_1$ bis $E_i$                         \\
 $r_{ij}$             & Radialer Abstand zwischen Teilchen $i$ und Teilchen $j$             \\
 $r_i$                & Ereignisrate von $E_i$                                              \\
+$\vec r_i$           & Position des Teilchens $i$                                          \\
 $R_N$                & Summe aller Ereignisraten                                           \\
 $r_\text{s}$         & Radius für Suchoperationen                                          \\
 $r_\text{bond}$      & Bindungslänge                                                       \\
@@ -156,11 +159,9 @@ $T_\text{E}$         & Laufzeit zur Auswahl eines KMC-Ereignisses               
 $T_\text{MD}$        & Laufzeit der MD-Simulation eines Ereignisses                        \\
 $t_\text{relax}$     & Relaxationszeit in einer MD-Simulation                              \\
 $u$,~$u'$            & $[0,1)$-gleichverteilte Zufallszahlen                               \\
-$\vec F(X)$          & Kraft auf ein Teilchen                                              \\
-$\vec p$             & Impulsvektor                                                        \\
-$\vec v$             & Geschwindigkeitsvektor                                              \\
 $V$                  & Volumen                                                             \\
 $V(X)$               & Potentielle Energie eines Teilchens                                 \\
+$\vec v$             & Geschwindigkeitsvektor                                              \\
 $w_\text{eff}$       & Maximale Breite eines Simulationsraumes für effiziente Simulationen \\
 $w_\text{MD}$        & Breite der MD-Box                                                   \\
 $w_\text{sim}$       & Breite des Simulationsraumes                                        \\
