--- a/forcefields.tex
+++ b/forcefields.tex
@@ -21,7 +21,7 @@ Stellvertretend steht das Lennard-Jones-Potential zur Darstellung von allgemeine
 \end{equation}
 Weitere Paarpotentiale wie etwa das mit dem Lennard-Jones-Potential verwandte Bucking\-ham-Potential nehmen aufgrund unterschiedlicher Anwendungsgebiete andere Formen an (Abbildung~\ref{fig:mdpairpotentials}).
 Allen Paar-Potentialen ist gemein, eine rein radiale Abhängigkeit $V(r_{ij})$ zu besitzen, die oftmals einen charakteristischen Bindungsabstand in Abhängigkeit der Parameter bildet, welcher sich als Minimum in den Potentialen äußert.
-Unterhalb dieses Radius' dominiert ein repulsiver Term, wo hingegen oberhalb davon ein leicht attraktiver Term vorherrscht, der sich für große Radien Null annähert und deshalb mit einem Cutoff-Radius $r_\text{cut}$ versehen ist.
+Unterhalb dieses Radius' dominiert ein repulsiver Term, wo hingegen das Potential oberhalb davon leicht attraktiv ist und sich für große Radien Null annähert, weshalb es oft mit einem Cutoff-Radius $r_\text{cut}$ versehen ist.
 
 \begin{figure}[b]
   \centering
@@ -34,14 +34,14 @@ Zwar zeigen Paarpotentiale gute thermodynamische Eigenschaften bei geringem Rech
 
 \subsubsection{N-Teilchen-Potentiale}
 
-N-Teilchen-Potentiale erweitern Paarpotentiale um weitere Terme, die von der Position einer festen Anzahl an Teilchen abhängen.
+N-Teilchen-Potentiale erweitern Paarpotentiale um weitere Terme, die von der Position einer festen Anzahl von Teilchen abhängen.
 Damit können beispielsweise Winkel- und Torsionsabhängigkeiten wiedergegeben werden, die für die Beschreibung von Molekülen notwendig sind.
 
 \begin{equation}
   E = \sum_i\sum_{j \neq i}{V_2\left(r_{ij}\right)} + \sum_i\sum_{j \neq i}\sum_{\substack{k \neq i \\ k \neq j}}{V_3\left(r_{ij}, r_{ik}, \theta_{ijk}\right)} + \dots
 \end{equation}
 Obwohl sich mit N-Teilchen-Potentialen komplexere Systeme betrachten lassen, zeigen sie die gleichen Schwachstellen wie Paarpotentiale, benötigen aber eine größere Anzahl an Parametern.
-Es gibt zwar erfolgreiche Anwendungen für Biomoleküle\cite{case_amber_2005,brooks_charmm:_1983,brooks_charmm:_2009,berendsen_gromacs:_1995,hess_gromacs_2008}, die allerdings aufgrund ihrer Spezialisierung zu kovalenten und Wasserstoffbrücken-Bindungen in Biomolekülen nicht auf allgemeine Stoffsysteme wie Festkörper oder Oberflächen übertragbar sind.
+Es gibt zwar erfolgreiche Anwendungen für Biomoleküle\cite{case_amber_2005,brooks_charmm:_1983,brooks_charmm:_2009,berendsen_gromacs:_1995,hess_gromacs_2008}, die allerdings aufgrund ihrer Spezialisierung für kovalente und Wasserstoffbrücken-Bindungen in Biomolekülen nicht auf allgemeine Stoffsysteme wie Festkörper oder Oberflächen übertragbar sind.
 
 \subsubsection{Embedded Atom Model}
 
@@ -66,9 +66,9 @@ Für Metalloxide und weitere Mischsysteme existiert eine Erweiterung in Form des
 
 \subsubsection{Reactive Force Fields}
 
-Reaktive Kraftfelder (Reactive Force Fields, ReaxFF) wurden von \textsc{van Duin et al.}\cite{van_duin_reaxff:_2001} 2001 mit dem Ziel entwickelt, Reaktionen zwischen Molekülen mit molekulardynamischen Methoden beschreiben zu können.
+Reaktive Kraftfelder (Reactive Force Fields, ReaxFF) wurden von \textsc{van Duin et al.}\cite{van_duin_reaxff:_2001} mit dem Ziel entwickelt, Reaktionen zwischen Molekülen mit molekulardynamischen Methoden beschreiben zu können.
 %% Mangels expliziter Beschreibung der involvierten Elektronen war die Beschreibung von Bindungen zuvor nur mit Elektronenstrukturrechnungen möglich, denen aber eine obere Grenze von wenigen hundert Atomen gesetzt ist.
-Durch Beschreibung der Über- und Unterkoordination der Atome innerhalb ihrer Nachbarschaft, zusätzlich zum Ladungsausgleich zwischen den Atomen, Van-der-Waals-Wechselwirkungen und Coulomb-Kräften, lassen sich mit der ReaxFF-Formulierung Bindungen während der Simulation dynamisch formen und lösen, wodurch die Simulation von Reaktionen ermöglicht wird.
+Durch die Beschreibung der Über- und Unterkoordination der Atome innerhalb ihrer Nachbarschaft, zusätzlich zum Ladungsausgleich zwischen den Atomen, Van-der-Waals-Wechselwirkungen und Coulomb-Kräften, lassen sich mit der ReaxFF-Formulierung chemische Bindungen während der Simulation dynamisch formen und lösen, wodurch die Simulation von Reaktionen ermöglicht wird.
 Die Gesamtenergie $E_\text{system}$ des Systemes setzt sich aus den folgenden Summanden zusammen, über die Tabelle~\ref{tab:reaxenergies} einen kurzen Überblick gibt.
 \begin{align}
   \label{reaxformulation}
@@ -79,9 +79,9 @@ Die meisten Terme greifen auf die Bindungsordnung $BO_{ij}'$ zurück, welche sic
 \begin{equation}
   BO_{ij}' = \exp\left( p_{\text{bo,1}} \cdot \left( \frac{r_{ij}}{r_0} \right)^{p_\text{bo,2}} \right) + \exp\left( p_{\text{bo,3}} \cdot \left( \frac{r_{ij}}{r_{0,\pi}} \right)^{p_\text{bo,4}} \right) + \exp\left( p_{\text{bo,5}} \cdot \left( \frac{r_{ij}}{r_{0,\pi\pi}} \right)^{p_\text{bo,6}} \right)
 \end{equation}
-Darüber hinaus werden einige Terme der Energiesumme in der Nähe des Cutoff-Abstands sowie an Koordinations-Übergängen auf 0 gesenkt, um Diskontinuitäten zu vermeiden und einen fließenden Übergang zwischen Bindungszuständen zu ermöglichen.
+Darüber hinaus werden einige Terme der Energiesumme in der Nähe des Cutoff-Abstands sowie an Koordinations-Übergängen auf Null gesenkt, um Diskontinuitäten zu vermeiden und einen fließenden Übergang zwischen Bindungszuständen zu ermöglichen.
 
-\begin{table}
+\begin{table}[!b]
   \oddrowcolors
   \caption[Summanden der ReaxFF-Gesamtenergie]{
     Erläuterung der Summanden der ReaxFF-Gesamtenergie aus Gleichung~\ref{reaxformulation}\cite{van_duin_reaxff:_2001}
@@ -109,10 +109,12 @@ Darüber hinaus werden einige Terme der Energiesumme in der Nähe des Cutoff-Abs
 \end{table}
 
 Das ReaxFF-Potential wurde ursprünglich für Reaktionen von organischen Molekülen entwickelt\cite{van_duin_reaxff:_2001}, doch hat es sich als vielseitig genug herausgestellt, auch eine Vielzahl anderer Materialien wie Kristalle und nichtorganische Verbindungen simulieren zu können\cite{kulkarni_oxygen_2013,narayanan_reactive_2012,zhang_carbon_2009}.
-Die einzige Abhängigkeit besteht zum Trainingssatz, also den Test-Strukturen, an deren Werte die Parametrisierung des Reax-Kraftfeldes angepasst wurde.
+Die einzige Abhängigkeit besteht zum Trainingssatz, also den Strukturen, an deren Werte die Parametrisierung des Reax-Kraftfeldes angepasst wird.
 So kann die Parametrisierung in der Regel nur die Strukturen und Materialien zuverlässig wiedergeben, für die sie ursprünglich erstellt wurde.
 Für erweiterte Anwendungen ist in der Regel eine aufwendige Anpassung der Parametersätze mittels geeigneter Trainingsstrukturen erforderlich.
 
-In den letzten fünf Jahren haben reaktive Kraftfelder jedoch an Aufmerksamkeit gewonnen, sodass die Zahl verfügbarer spezialisierter Parametrisierungen stetig zunimmt.
+\clearpage
+
+In den letzten fünf Jahren haben reaktive Kraftfelder jedoch an Aufmerksamkeit gewonnen, sodass die Zahl der verfügbaren Parametrisierungen stetig zunimmt.
 Es gibt auch Bestrebungen, sich ergänzende ReaxFF-Parametrisierungen zu kombinieren und somit mit einer Parametrisierung eine große Zahl von Zielsystemen betrachten zu können.
 Besonders in kommerzieller MD-Software\cite{biovia_materials_2014} wird so versucht, dem Nutzer ein umfassendes Paket für die Simulation beliebiger Strukturen zu präsentieren, ohne ihm aber die Grenzen der Vorhersagekraft des Parametersatzes erkenntlich zu machen.
