--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -90,7 +90,7 @@ Es wurden dafür MD-Boxen mit einer Größe von \SI{37x37x25}{\angstrom} mit jew
 Letztere liegen mit \SI{16.7}{\electronvolt} leicht oberhalb der üblichen Teilchenenergien von \SIrange{1}{10}{\electronvolt}\cite{thompson_ii._1968}, werden aber vor dem eigentlichen Auftreffen durch das Thermostat, welches unvermeidlich auch das auftreffende Atom betrifft, reduziert.
 Zur Korrektur dieses systematischen Fehlers wäre eine Aufteilung des Zeit-Integrators der MD-Simulation in einen kanonischen und einen mikrokanonischen Teil notwendig, was mit einem erhöhten Rechenaufwand für jeden Zeitschritt verbunden ist.
 Wie im vorherigen Abschnitt untersucht, hat die Temperatur in der MD-Simulation keinen Einfluss auf die grundlegende Struktur, weshalb eine leichte Überschätzung der Teilchenenergie und der damit einhergehenden Temperatur nach Auftreffen des Teilchens toleriert wird.
-Ein mögliches Problem besteht hier in dem Herausschlagen von Teilchen aus der Oberfläche, allerdings sind die Energie dafür unterhalb typischer Sputter-Energien im Bereich mehrerer \SI{}{\kilo\electronvolt}\cite{mattox_handbook_2010}, mit denen Teilchen auf dem Target auftreffen und die in dieser Simulation betrachteten Atome heraus schlagen.
+Ein mögliches Problem besteht hier in dem Herausschlagen von Teilchen aus der Oberfläche, allerdings sind die Energien dafür unterhalb typischer Sputter-Energien im Bereich mehrerer \SI{}{\kilo\electronvolt}\cite{mattox_handbook_2010}, mit denen Teilchen auf dem Target auftreffen und die in dieser Simulation betrachteten Atome heraus schlagen.
 
 \begin{figure}[t]
   \captionsetup[subfigure]{singlelinecheck=false}
@@ -117,19 +117,19 @@ Ein mögliches Problem besteht hier in dem Herausschlagen von Teilchen aus der O
 
 Die Simulationen zeigen epitaktisches Wachstum von Gold-Schichten (Abbildungen~\ref{fig:goldsmooth-a} und~\ref{fig:golddepositions-d}) mit einer RMS-Rauheit (Root Mean Square, Standardabweichung) von \SI{1.2}{\angstrom}, die somit unterhalb der Bindungslänge von \SI{2.884}{\angstrom} liegt und über den Simulationszeitraum konstant bleibt (Abbildung~\ref{fig:goldsmooth-b}).
 Experimentelle Werte zur Rauheit von epitaktisch abgeschiedenen Gold-Filmen wurden nicht gefunden werden, doch liegen die simulierten Werte unterhalb der Rauheit von \SIrange{11}{18}{\nano\meter} für polykristalline Schichten, die per PVD auf Glas-Substraten abgeschieden wurden\cite{svorcik_annealing_2011}.
-Diese sind allerdings durch die Bildung von Goldpartikel dominiert, wohingegen die simulierten Atome bereits auf perfekten monokristallinen Strukturen auftreffen.
+Diese sind allerdings durch die Bildung von Goldpartikeln dominiert, wohingegen die simulierten Atome bereits auf perfekten monokristallinen Strukturen auftreffen.
 Da Gold auch auf anderen Kristallstrukturen und ungeordneten Substraten eine Affinität zu kristallinem Wachstum zeigt\cite{gottsche_uber_1956,everitt_evolution_2000}, wirken die Ergebnisse der Parsivald-Simulation plausibel.
 Eine Untersuchung amorpher und polykristalliner Substrate wäre für bessere Vergleichbarkeit mit Experimenten\cite{adamov_electrical_1974} interessant, übersteigt jedoch den Rahmen der Arbeit.
 Poren und Hohlräume wurden bei Untersuchungen per Alpha-Form (Abschnitt~\ref{mdmethods-surface}) nicht gefunden, sodass die Gold-Atome in einem perfekten fcc-Gitter arrangiert sind.
 
-Ergänzend wurde zur Prüfung der Robustheit des Parsivald-Prozesses nanostrukturierte Substrate in Form von \SI{1}{\nano\meter} breiten Lamellen und Säulen vorbereitet, auf welchen sich nach kurzer Simulationszeit glatte Schichten gebildet haben, die keine Unterschiede zu den Schichten auf dem glatten Substrat zeigen.
+Ergänzend wurde zur Prüfung der Robustheit des Parsivald-Prozesses nanostrukturierte Substrate in Form von \SI{1}{\nano\meter} breiten Lamellen und Säulen vorbereitet (Anhang~\ref{appendix_gold}), auf welchen sich nach kurzer Simulationszeit glatte Schichten gebildet haben, die keine Unterschiede zu den Schichten auf dem glatten Substrat zeigen.
 
 \subsubsection{Simulation von Abscheidungen auf strukturierten Substraten}
 
 Neben der Abscheidung auf glatten Substraten wurden am Beispiel der Gold-PVD auch Abscheidungen auf strukturierten Substraten mit identischen Prozessbedingungen simuliert (Abbildung~\ref{fig:golddepositions}).
 Dafür wurden Substrate präpariert, welche die Form von Schwellen oder Spitzen mit einer Höhe von \SI{20}{\angstrom}, einer Breite von \SI{50}{\angstrom} und Neigungen von \SI{15}{\degree}, \SI{20}{\degree}, \SI{30}{\degree}, \SI{45}{\degree}, \SI{60}{\degree} und \SI{90}{\degree} annehmen (Abbildungen~\ref{fig:golddepositions-b} und~\ref{fig:golddepositions-c}).
 Auf vorherige Relaxierung der Substrate wurde aufgrund der Stabilität sowie der relaxierenden Eigenschaften der MD-Ereignisse verzichtet.
-Dadurch können sich an den Wänden der Schwellen und Spitzen auch ungünstige Schnitte durch die Einheitszellen ergeben, die in den weiteren Untersuchungen aber nicht maßgeblich für die Struktur der abgeschiedenen Schichten sind.
+Dadurch können sich an den Wänden der Schwellen und Spitzen auch ungünstige Kristallebenen ergeben, die in den weiteren Untersuchungen aber nicht maßgeblich für die Struktur der abgeschiedenen Schichten sind.
 
 \begin{figure}[t]
   \captionsetup[subfigure]{singlelinecheck=false}
@@ -226,7 +226,7 @@ Dadurch können sich an den Wänden der Schwellen und Spitzen auch ungünstige S
 
 Die Schichtdicken aus den Abscheidungssimulationen auf strukturierten Substraten unterscheiden sich nicht signifikant von den für glatte Substrate gewonnenen Werten, mit Ausnahme der \SI{90}{\degree}-Strukturen.
 Die abgeschiedenen Schichten wachsen ebenfalls epitaktisch auf, bilden aber Hohlräume und Nanoporen, wodurch sich kein perfekter Kristall ergibt.
-In der Rauheit bestehen Unterschiede zur Simulation von Abscheidungen auf glatten Substraten (\SI{0}{\degree}) in einer generell erhöhten Rauheit, die für geringe Neigungswinkel allerdings konstant bleibt.
+Es bestehen Unterschiede zur Simulation von Abscheidungen auf glatten Substraten (\SI{0}{\degree}) in einer generell erhöhten Rauheit, die für geringe Neigungswinkel allerdings konstant bleibt.
 
 Für extreme Neigungswinkel von \SI{90}{\degree} ist eine Zunahme der Rauheit zu beobachten, welche durch die Bildung von Nanoporen an der Basis der Spitzen und Schwellen in der Simulation verursacht wird (Abbildung~\ref{fig:goldpockets}).
 Dabei handelt es sich um ein Artefakt der Oberflächensuche der Parsivald-Simulation, die von oben eine senkrechte Suche nach dem höchsten Punkt in der xy-Ebene durchführt.
@@ -239,6 +239,7 @@ In der Auswertung macht sich der Abschluss durch einen rapiden Abfall der Rauhei
 
 \begin{table}[t]
   \begin{threeparttable}
+    \oddrowcolors
 
     \caption[Laufzeitgrößen von Parsivald für Gold-PVD]{
       Laufzeitgrößen von Parsivald für Gold-PVD bei unterschiedlichen $w_\text{sim}$
@@ -280,7 +281,7 @@ Sofern nicht anders angegeben, wurden die Hauptprozesse auf den schnellen Xeon-K
 Aus Messungen ergeben sich die elementaren Laufzeiten als $T_\text{E} = \SI{26}{\milli\second}$ und $T_\text{MD} = \SI{4.7}{\second}$, während $w_\text{MD} = \SI{37}{\angstrom}$ fest gewählt und $w_\text{sim}$ von \SI{106}{\angstrom} bis \SI{4}{\micro\meter} variiert wurde, wobei auch der für die Beschichtung von Nanoelektronik interessante Bereich von \SIrange{100}{1000}{\nano\meter} untersucht wurde.
 Dabei wurde, durch verschiedene Störeinflüsse bedingt, eine unterschiedliche Anzahl an Parsivald-Zyklen durchlaufen, sodass die Laufzeiten keinen direkten Vergleich zulassen.
 
-Die Ergebnisse der Untersuchungen der Laufzeitgrößen sind in Tabelle~\ref{tab:goldscalability} zusammengefasst und stimmen gut mit den in Abschnitt~\ref{runtimeanalysis} ermittelten analytischen Werten überein (Abbildung~\ref{fig:goldscala}).
+Die Ergebnisse der Untersuchungen der Laufzeitgrößen sind in Tabelle~\ref{tab:goldscalability} zusammengefasst und stimmen gut mit den in Abschnitt~\ref{runtimeanalysis} modellierten Werten überein (Abbildung~\ref{fig:goldscala}).
 Die Zahl der möglichen Prozesse (Abbildung~\ref{fig:goldscala-workers}) steht für $\rho_\text{worker}=\SI{20}{\percent}$ in guter Übereinstimmung mit $p_\text{max}$, wobei die maximale effiziente Substratbreite als $w_\text{eff} \approx \SI{100}{\nano\meter}$ ermittelt wurde.
 Für die mit $p_\text{max}$ verwandten Workerdichten $\rho_\text{worker}$ ist eine leichte Abnahme von \SI{21.9}{\percent} für $w_\text{sim} = \SI{106}{\angstrom}$ zu \SI{10.3}{\percent} für $w_\text{sim} = \SI{1000}{\angstrom}$ erkennbar, die danach jedoch quadratisch mit der Substratbreite abnimmt.
 Es existiert ein Ausreißer bei $w_\text{sim} = \SI{1}{\micro\meter}$, für den nur 46 Worker gestartet wurden ($\num{46} < p_\text{max} \approx \num{190}$), die zudem durch einen inzwischen behobenen Fehler im Host-Worker-Code auf einen Wert von \num{25.4} unterschätzt wurden.
